--- a/package.json
+++ b/package.json
@@ -1,17 +1,3 @@
-{
-  "name": "Minecraft Afk Bot",
-  "version": "2.1",
-  "description": "Afk bot for minecraft servers.",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Lamgerr",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^5.1.0",
-    "mineflayer": "^4.3.0",
-    "mineflayer-pathfinder": "^2.1.1"
-  }
+"dependencies": {
+  "mineflayer": "" // or remove version to always get latest
 }
