--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
-{
-  "name": "minecraft-bot",
-  "version": "1.0.0",
-  "description": "A Mineflayer Minecraft bot",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "mineflayer": "*",
-    "express": "^4.18.2"
-  }
+"dependencies": {
+  "mineflayer": "*",
+  "mineflayer-pathfinder": "*",
+  "express": "^4.18.2"
 }
