--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "minecraft-bot",
   "version": "1.0.0",
+  "description": "A simple Minecraft bot using Mineflayer",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "mineflayer": "*",
-    "mineflayer-pathfinder": "*",
-    "express": "^4.18.2"
+    "mineflayer": "^4.5.0"
   }
 }
