--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "minecraft-bot",
   "version": "1.0.0",
-  "description": "A simple Minecraft bot using Mineflayer",
+  "description": "Mineflayer bot for 1.20.1 server",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "mineflayer": "^4.5.0"
+    "mineflayer": "^4.5.0",
+    "mineflayer-pathfinder": "^2.3.0",
+    "express": "^4.18.2"
   }
 }
