--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "mineflayer": "^4.5.0",
+    "mineflayer": "^4.6.0"
     "mineflayer-pathfinder": "^2.3.0",
     "express": "^4.18.2"
   }
